--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -60,19 +60,30 @@
 .sidebar.open {
     right: 0;
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .sidebar-menu {
     list-style: none;
-    padding: 0;
+    width: 100%;
+    padding: 0.2rem;
     margin-top: 2rem;
 }
 
 .sidebar-menu li {
-    padding: 0.75rem 0;
-    font-size: 1rem;
-    border-bottom: 1px solid #eee;
+    padding: 1.2rem 0.5rem;
+    font-size: 1.2rem;
     cursor: pointer;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.sidebar-menu li:hover {
+    background-color: #f0f0f0;
 }
 
 
@@ -101,4 +112,42 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
     z-index: 1000;
+}
+
+.logout-btn {
+    background-color: transparent;
+    /* Tailwind red-400 */
+    color: #f87171;
+    border: none;
+    border-radius: 0.375rem;
+    /* Tailwind rounded-md */
+    padding: 1.2rem 0.5rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.logout-btn:hover {
+    background-color: transparent;
+    /* Tailwind red-400 */
+    color: hsl(0, 100%, 50%);
+    border: none;
+    border-radius: 0.375rem;
+    /* Tailwind rounded-md */
+    padding: 1.2rem 0.5rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1rem;
+    font-weight: 600;
 }
