--- a/src/components/Chatbot.module.css
+++ b/src/components/Chatbot.module.css
@@ -11,18 +11,24 @@
     font-family: "Segoe UI", "Helvetica Neue", "Roboto", sans-serif;
 }
 
+@media (max-width: 1080px) {
+    .chatbot-toggle {
+        bottom: 20%;
+    }
+}
+
 .button:hover {
     transform: scale(1.05);
     background: linear-gradient(135deg, #4169E1, #e9f5f8);
 }
 
 .chatWindow {
-    height: 30rem;
+    height: 32rem;
     position: fixed;
-    bottom: 90px;
-    right: 40px;
-    width: 30rem;
-    max-height: 39rem;
+    bottom: 9.5rem;
+    right: 2rem;
+    width: 22rem;
+    max-height: 70%;
     background: white;
     border-radius: 20px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
@@ -36,39 +42,39 @@
 
 .chatHeader {
     background: linear-gradient(90deg, #1943DA, #e9f5f8);
-    color: #1f1f1f;
-    padding: 12px;
+    color: white;
+    padding: 0.6rem;
     font-weight: 600;
-    font-size: 14px;
+    font-size: 1.1rem;
     text-align: center;
 }
 
 .chatBody {
     font-family: "Segoe UI", "Helvetica Neue", "Roboto", sans-serif;
     flex: 1;
-    padding: 8px;
+    padding: 0.6rem;
     overflow-y: auto;
     background-color: white;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.6rem;
 }
 
 .botMessage {
     background-color: #e9f5f8;
     color: #4e342e;
-    padding: 10px 14px;
+    padding: 0.6rem 0.8rem;
     border-radius: 16px 16px 16px 4px;
-    min-width: 35px;
-    max-width: 75%;
-    font-size: 12px;
+    min-width: 3rem;
+    max-width: 80%;
+    font-size: 0.9rem;
     align-self: flex-start;
     box-shadow: 0 3px 6px rgba(255, 167, 38, 0.15);
 }
 
 .typingIndicator {
-    height: 8px;
-    width: 8px;
+    height: 0.3rem;
+    width: 0.3rem;
     overflow: auto;
     position: relative;
     margin: 6px 0 0 4px;
@@ -78,10 +84,10 @@
     font-family: "Segoe UI", "Helvetica Neue", "Roboto", sans-serif;
     background-color: #1943DA;
     color: white;
-    padding: 10px 14px;
+    padding: 0.6rem 0.8rem;
     border-radius: 16px 16px 4px 16px;
     max-width: 75%;
-    font-size: 12px;
+    font-size: 0.9rem;
     align-self: flex-end;
     box-shadow: 0 3px 6px rgba(255, 193, 7, 0.2);
 }
@@ -89,9 +95,9 @@
 .chatInputArea {
     display: flex;
     border-top: 1px solid #eee;
-    padding: 7px;
+    padding: 0.6rem;
     background-color: #e9f5f8;
-    gap: 7px;
+    gap: 0.6rem;
 }
 
 .chatInput {
@@ -99,8 +105,8 @@
     flex: 1;
     border: 1px solid #1943DA;
     border-radius: 20px;
-    padding: 10px 15px;
-    font-size: 12x;
+    padding: 0.6rem 0.8rem;
+    font-size: 1rem;
     outline: none;
     transition: border 0.3s ease;
     background-color: white;
@@ -128,8 +134,8 @@
 
 .dotFlashing {
     position: relative;
-    width: 4px;
-    height: 4px;
+    width: 0.3rem;
+    height: 0.3rem;
     border-radius: 50%;
     background-color: #4169E1;
     color: #1943DA;
@@ -140,10 +146,10 @@
 .feedbackButtons {
     position: absolute;
     left: 2%;
-    margin-top: 8px;
+    margin-top: 0.2rem;
     display: flex;
-    gap: 10px;
-    font-size: 18px;
+    gap: 0.6rem;
+    font-size: 1.1rem;
 }
 
 .thumb {
