--- a/src/components/CollapsibleInfo.css
+++ b/src/components/CollapsibleInfo.css
@@ -1,6 +1,6 @@
 .collapsible-container {
     position: fixed;
-    bottom: 55px;
+    bottom: 50px;
     /* Adjust to sit just above the bottom navbar */
     width: 100%;
     z-index: 40;
@@ -13,7 +13,7 @@
 .collapsible-card {
     width: 100%;
     background-color: #fff;
-    border: 1px solid #ddd;
+    border: 0.1rem solid #ddd;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
