--- a/src/components/Chatbot.module.css
+++ b/src/components/Chatbot.module.css
@@ -165,6 +165,10 @@
     font-size: 0.5rem;
 }
 
+.feedbackButtonsNotActive {
+    display: none;
+}
+
 .thumb {
     cursor: pointer;
     user-select: none;
